deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bggapi-deployment
  namespace: default  # Specify the namespace here
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bggapi
  template:
    metadata:
      labels:
        app: bggapi
    spec:
      containers:
      - name: bggapi
        image: gcr.io/bggapi/bggapi:latest
        ports:
        - containerPort: 8080
          protocol: TCP
