service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bggapi-service
spec:
  selector:
    app: bggapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8051
  type: LoadBalancer
